[package]
name = "snes-gfx"
description = "A library for extracting SNES-graphics data and nametables."
version = "0.1.4"
edition="2021"
license = "MIT"
keywords = ["snes", "graphics", "tile", "tilemap"]
authors = ["Simon <h.simon.lindell@gmail.com>"]
repository = "https://github.com/NibbleOfAnOctet/shadowresources/tree/main/libs/snes-gfx"

[dependencies]
byteorder="1.5.0"
image ="0.25.2"

[dev-dependencies]
mockall = "0.13.0"